added typing to client with some ui features

--- a/client/src/pages/panel/panel.html
+++ b/client/src/pages/panel/panel.html
@@ -29,7 +29,9 @@
                     </span>
                 </div>
             </div>
-            <button class="server-toggle server-toggle-enabled">Запустить</button>
+            <button class="server-toggle server-toggle-enabled">
+                Запустить
+            </button>
                 <!--
             </div>
             <div class="rcon-wrapper">
