--- a/client/src/pages/panel/panel.html
+++ b/client/src/pages/panel/panel.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="panel.css">
 </head>
 <body>
+    <!-- <script src="../../assets/js/core.js" defer></script> -->
     <script src="js/panel.js" defer></script>
     <div class="wrapper">
         <header>
