added server list ui page, modified mc server manager on backend

--- a/client/src/pages/panel/panel.html
+++ b/client/src/pages/panel/panel.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="panel.css">
 </head>
 <body>
-    <!-- <script src="../../assets/js/core.js" defer></script> -->
+    <script src="../../assets/js/lib.js"></script>
+    <script src="../../assets/js/core.js" defer></script>
     <script src="js/panel.js" defer></script>
     <div class="wrapper">
         <header>
