added very styles to servers list

--- a/client/src/pages/servers/servers.html
+++ b/client/src/pages/servers/servers.html
@@ -6,6 +6,8 @@
     <title>servers</title>
     <link rel="stylesheet" href="../../assets/css/globals.css">
     <link rel="stylesheet" href="servers.css">
+    <link rel="stylesheet" href="../../assets/fonts/Roboto/600.css">
+    <link rel="stylesheet" href="../../assets/fonts/Roboto/500.css">
 </head>
 <body>
     <script src="../../assets/js/core.js" defer></script>
