--- a/client/src/pages/login/login.html
+++ b/client/src/pages/login/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login</title>
+    <link rel="stylesheet" href="../../assets/fonts/Roboto/500.css">
     <link rel="stylesheet" href="../../assets/css/globals.css">
     <link rel="stylesheet" href="login.css">
 </head>
