Add page about us

--- a/client/src/pages/login/login.html
+++ b/client/src/pages/login/login.html
@@ -38,7 +38,9 @@
             </div>
         </main>
         <footer>
-            
+		<a href="../aboutus/aboutus.html">
+			about us
+		</a>            
         </footer>
     </div>
 </body>
