login page updates

--- a/client/src/pages/login/login.html
+++ b/client/src/pages/login/login.html
@@ -14,7 +14,9 @@
     <script src="js/login.js" defer></script>
     <div class="wrapper">
         <header>
-
+            <h1 class="header-caption">
+                Admin Panel
+            </h1>
         </header>
         <main>
             <div class="wrapperr">
