--- a/client/src/pages/login/login.html
+++ b/client/src/pages/login/login.html
@@ -40,9 +40,9 @@
             </div>
         </main>
         <footer>
-		<a href="../aboutus/aboutus.html">
-			about us
-		</a>            
+            <a href="/aboutus/aboutus">
+                about us
+            </a>       
         </footer>
     </div>
 </body>
