--- a/client/src/pages/panel/panel.html
+++ b/client/src/pages/panel/panel.html
@@ -14,7 +14,7 @@
     <script src="js/panel.js" defer></script>
     <div class="wrapper">
         <header>
-            <button class="icon exit"></button>
+            <a href="/servers/servers" class="icon exit"></a>
             <h1 class="header-caption">
                 Admin Panel
             </h1>
@@ -47,7 +47,9 @@
         -->
         </main>
         <footer>
-
+            <a href="/aboutus/aboutus">
+                about us
+            </a>      
         </footer>
     </div>
 </body>
