--- a/client/src/pages/servers/servers.html
+++ b/client/src/pages/servers/servers.html
@@ -25,7 +25,9 @@
             </ul>
         </main>
         <footer>
-            
+            <a href="/aboutus/aboutus">
+                about us
+            </a>      
         </footer>
     </div>
 </body>
