--- a/client/src/pages/aboutus/aboutus.html
+++ b/client/src/pages/aboutus/aboutus.html
@@ -3,28 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login</title>
+    <title>aboutus</title>
     <link rel="stylesheet" href="../../assets/fonts/Roboto/500.css">
     <link rel="stylesheet" href="../../assets/css/globals.css">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="aboutus.css">
 </head>
 <body>
     <script src="../../assets/js/core.js" defer></script>
     <script src="../../assets/js/lib.js" defer></script>
-    <script src="js/login.js" defer></script>
+    <script src="js/aboutus.js" defer></script>
     <div class="wrapper">
         <header>
-
+            <a href="/login/login" class="icon exit"></a>
+            <h1 class="header-caption">
+                Admin Panel
+            </h1>
         </header>
         <main>
             <div class="wrapperr">
-		<h1 style="color: white">This is just test site</h1>
+		        <h1>This is just test site</h1>
             </div>
         </main>
         <footer>
-		<a href="../login/login.html">
-			back
-		</a>            
+            <a href="/aboutus/aboutus">
+                about us
+            </a>      
         </footer>
     </div>
 </body>
