api bug fix, added smooth page reloading, updated gitignore

--- a/client/src/pages/aboutus/aboutus.html
+++ b/client/src/pages/aboutus/aboutus.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>aboutus</title>
-    <link rel="stylesheet" href="../../assets/fonts/Roboto/500.css">
-    <link rel="stylesheet" href="../../assets/css/globals.css">
+    <link immutable rel="stylesheet" href="../../assets/fonts/Roboto/500.css">
+    <link immutable rel="stylesheet" href="../../assets/css/globals.css">
     <link rel="stylesheet" href="aboutus.css">
 </head>
 <body>
-    <script src="../../assets/js/core.js" defer></script>
-    <script src="../../assets/js/lib.js" defer></script>
+    <script immutable src="../../assets/js/core.js" defer></script>
+    <script immutable src="../../assets/js/lib.js" defer></script>
     <script src="js/aboutus.js" defer></script>
     <div class="wrapper">
         <header>
-            <a href="/login/login" class="icon exit"></a>
             <h1 class="header-caption">
                 Admin Panel
             </h1>
