--- a/client/src/pages/login/login.html
+++ b/client/src/pages/login/login.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login</title>
-    <link rel="stylesheet" href="../../assets/fonts/Roboto/500.css">
-    <link rel="stylesheet" href="../../assets/css/globals.css">
-    <link rel="stylesheet" href="login.css">
+    <link immutable rel="stylesheet" href="../../assets/fonts/Roboto/500.css">
+    <link immutable rel="stylesheet" href="../../assets/css/globals.css">
+    <link rel="stylesheet" mutable href="login.css">
 </head>
 <body>
-    <script src="../../assets/js/core.js" defer></script>
-    <script src="../../assets/js/lib.js" defer></script>
+    <script immutable src="../../assets/js/core.js" defer></script>
+    <script immutable src="../../assets/js/lib.js" defer></script>
     <script src="js/login.js" defer></script>
     <div class="wrapper">
         <header>
