updated readme & improved nav ui

--- a/client/src/pages/aboutus/aboutus.html
+++ b/client/src/pages/aboutus/aboutus.html
@@ -19,6 +19,12 @@
             </h1>
         </header>
         <main>
+            <nav>
+                <a class="return" href="/login/login">
+                    <div class="icon exit"></div>
+                    Вернуться
+                </a>
+            </nav>
             <div class="wrapperr">
 		        <h1>This is just test site</h1>
             </div>
