--- a/client/src/pages/panel/panel.html
+++ b/client/src/pages/panel/panel.html
@@ -19,6 +19,12 @@
             </h1>
         </header>
         <main>
+            <nav>
+                <a class="return" href="/servers/servers">
+                    <div class="icon exit"></div>
+                    Вернуться
+                </a>
+            </nav>
             <div class="control-wrapper">
                 <div class="control">
                     <h2 class="server-name">Если вы это видите, то скорее всего произошла ошибка.</h2>
@@ -33,21 +39,6 @@
             <button class="server-toggle server-toggle-enabled">
                 Запустить
             </button>
-                <a class="aexit" href="/servers/servers">
-                    <div class="icon exit"></div>
-                    К списку серверов
-                </a>
-            <!--
-            </div>
-            <div class="rcon-wrapper">
-                <div class="rcon">
-                    <code>
-                        blah blah blah
-                    </code>
-                    <input type="text" placeholder="|">
-                </div>
-            </div> 
-        -->
         </main>
         <footer>
             <a href="/aboutus/aboutus">
