server: removed /servers route from test routes. client: implemented server list feature

--- a/client/src/pages/servers/servers.html
+++ b/client/src/pages/servers/servers.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <script immutable src="../../assets/js/core.js" defer></script>
+    <script immutable src="../../assets/js/lib.js"></script>
     <script src="../../assets/js/lib.js" defer></script>
     <script src="js/servers.js" defer></script>
     <div class="wrapper">
