--- a/client/src/pages/panel/panel.html
+++ b/client/src/pages/panel/panel.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <script immutable src="../../assets/js/lib.js"></script>
-    <script src="../../assets/js/core.js" defer></script>
+    <script immutable src="../../assets/js/core.js" defer></script>
     <script src="js/panel.js" defer></script>
     <div class="wrapper">
         <header>
