server: improved api. client: added panel page error output

--- a/client/src/pages/panel/panel.html
+++ b/client/src/pages/panel/panel.html
@@ -39,6 +39,9 @@
             <button class="server-toggle server-toggle-enabled">
                 Запустить
             </button>
+            <div class="error-output">
+                <span id="js-errout"></span>
+            </div>
         </main>
         <footer>
             <a href="/aboutus/aboutus">
