client: smooth reloading bugfix

--- a/client/src/pages/servers/servers.html
+++ b/client/src/pages/servers/servers.html
@@ -5,15 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>servers</title>
     <link immutable rel="stylesheet" href="../../assets/css/globals.css">
-    <link rel="stylesheet" href="servers.css">
     <link immutable rel="stylesheet" href="../../assets/fonts/Roboto/600.css">
     <link immutable rel="stylesheet" href="../../assets/fonts/Roboto/500.css">
+    <link rel="stylesheet" href="servers.css">
 </head>
 <body>
-    <script immutable src="../../assets/js/core.js" defer></script>
-    <script immutable src="../../assets/js/lib.js"></script>
-    <script src="../../assets/js/lib.js" defer></script>
+    <script immutable src="../../assets/js/lib.js" defer></script>
     <script src="js/servers.js" defer></script>
+    <script src="../../assets/js/core.js" defer></script>
     <div class="wrapper">
         <header>
             <h1 class="header-caption">
