--- a/client/src/pages/panel/panel.html
+++ b/client/src/pages/panel/panel.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="panel.css">
 </head>
 <body>
-    <script immutable src="../../assets/js/lib.js"></script>
-    <script immutable src="../../assets/js/core.js" defer></script>
+    <script immutable src="../../assets/js/lib.js" defer></script>
+    <script src="../../assets/js/core.js" defer ></script>
     <script src="js/panel.js" defer></script>
     <div class="wrapper">
         <header>
