--- a/client/src/pages/aboutus/aboutus.html
+++ b/client/src/pages/aboutus/aboutus.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="aboutus.css">
 </head>
 <body>
-    <script immutable src="../../assets/js/core.js" defer></script>
+    <script src="../../assets/js/core.js" defer></script>
     <script immutable src="../../assets/js/lib.js" defer></script>
     <script src="js/aboutus.js" defer></script>
     <div class="wrapper">
