--- a/client/src/pages/login/login.html
+++ b/client/src/pages/login/login.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" mutable href="login.css">
 </head>
 <body>
-    <script immutable src="../../assets/js/core.js" defer></script>
+    <script src="../../assets/js/core.js" defer></script>
     <script immutable src="../../assets/js/lib.js" defer></script>
     <script src="js/login.js" defer></script>
     <div class="wrapper">
