--- a/client/src/pages/panel/panel.html
+++ b/client/src/pages/panel/panel.html
@@ -27,7 +27,7 @@
             </nav>
             <div class="control-wrapper">
                 <div class="control">
-                    <h2 class="server-name">Если вы это видите, то скорее всего произошла ошибка.</h2>
+                    <h2 class="server-name"></h2>
                 </div>
                 <div class="server-state server-state-disabled">
                     <img src="./assets/offline.svg" alt="состояние сервера" class="icon">
