server: changed stop function again, client: added semi-functional logs ui in panel

--- a/client/src/pages/panel/panel.html
+++ b/client/src/pages/panel/panel.html
@@ -42,6 +42,12 @@
             <div class="error-output">
                 <span id="js-errout"></span>
             </div>
+            <div class="rcon">
+                <ul id="js-logs">
+
+                </ul>
+                <input type="text" id="js-rcon-input">
+            </div>
         </main>
         <footer>
             <a href="/aboutus/aboutus">
